--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,16 +5,18 @@
 
 
 /* Header Section */
+
+
 .header-public {
-    @apply min-h-screen w-4/5 mx-auto;
+    @apply min-h-screen mt-5 lg:w-4/5 mx-auto;
 }
 
 .barra-navegacion {
-    @apply flex flex-col lg:gap-y-5 lg:flex-row items-center justify-between px-20 h-28;
+    @apply md:flex lg:gap-y-5 md:items-center md:justify-between md:px-20 lg:h-28;
 }
 
 .logo {
-    @apply text-4xl font-bold text-indigo-600;
+    @apply text-4xl font-bold text-indigo-600 w-fit mx-auto;
 }
 
 .logo::before {
@@ -26,7 +28,25 @@
 }
 
 .navegacion {
-    @apply flex flex-col lg:flex-row items-center gap-5;
+    @apply hidden lg:flex flex-col lg:flex-row items-center gap-5;
+}
+
+.menu-icon {
+    @apply relative hover:cursor-pointer lg:hidden mx-auto md:mx-0 w-12 h-12 p-0 mt-10 md:mt-0;
+}
+
+.menu-icon .icon {
+    @apply relative block mt-5 w-8 h-1 bg-slate-800 mx-auto;
+}
+
+.menu-icon .icon::before {
+    content: '';
+    @apply absolute lg:hidden w-8 h-1 bg-slate-800 -top-2;
+}
+
+.menu-icon .icon::after {
+    content: '';
+    @apply absolute lg:hidden w-8 h-1 bg-slate-800 top-2;
 }
 
 .navegacion__link {
@@ -37,6 +57,10 @@
     @apply text-indigo-600 border-2 border-indigo-600 rounded-full p-2 hover:bg-indigo-600 hover:text-white transition-colors duration-200;
 }
 
+/*-------------------------------------------------------*/
+/*-------------------------------------------------------*/
+/*-------------------------------------------------------*/
+
 /* Header Content */
 .header-content {
     @apply flex flex-col gap-y-5 items-center mt-32;
@@ -44,26 +68,26 @@
 
 .header-content:after {
     content: '';
-    background-image: url(../public/user.png);
-    @apply w-80 h-80 bg-contain bg-no-repeat;
+    background-image: url(../img/user.png);
+    @apply w-52 h-52 sm:w-60 sm:h-60 md:w-80 md:h-80 bg-contain bg-no-repeat;
 }
 
 .header-content__title {
-    @apply text-slate-800 text-6xl font-bold;
+    @apply text-slate-800 text-center text-5xl md:text-6xl font-bold;
 }
 
 .header-content__paragraph {
-    @apply w-2/5 text-center font-semibold;
+    @apply w-4/5 lg:w-2/5 lg:text-xl text-center font-semibold;
 }
 
 /* Header Footer */
 .header-footer {
-    @apply flex flex-col items-center mt-20 gap-2;
+    @apply flex flex-col md:items-center mt-10;
 }
 
 .arrow-bottom {
     content: '';
-    background-image: url('../public/arrow-down.png');
+    background-image: url('../img/arrow-down.png');
     @apply h-20 w-20 bg-no-repeat mx-auto bg-center hover:cursor-pointer;
     animation: arrowMovement 1s linear infinite;
 }
@@ -99,14 +123,163 @@
 
 /* About Me */
 .about-me {
-    @apply w-full bg-indigo-600 py-16 pb-40;
+    @apply w-full bg-indigo-600 pb-40;
 }
 
-.about-me h2 ,
-.about-me p {
-    @apply text-white text-lg w-1/2 mx-auto text-center;
+.about-me__grid {
+    @apply lg:grid lg:grid-cols-2 items-center w-4/5 mx-auto gap-x-5;
 }
 
-.about-me h2 {
-    @apply text-3xl font-bold mb-10;
+.about-me__content h3,
+.about-me__content p {
+    @apply text-white text-lg mx-auto text-center px-5;
+}
+
+.about-me__content h3 {
+    @apply text-3xl font-semibold mb-5;
+}
+
+.about-me__content img {
+    @apply w-96 mx-auto;
+}
+
+.about-me__technologies {
+    @apply flex flex-col h-full justify-center gap-10 mt-10 lg:mt-0;
+}
+
+.about-me__technologies--text {
+    @apply text-center lg:text-left;
+}
+
+.about-me__technologies--text h3,
+.about-me__technologies--text p {
+    @apply text-white;
+}
+
+.about-me__technologies--text h3 {
+    @apply text-3xl font-semibold mb-5;
+}
+
+.about-me__technologies--technologie {
+    @apply flex items-center flex-wrap gap-8 justify-center;
+}
+
+.about-me__technologies--technologie .technologie {
+    @apply flex flex-col items-center w-20 h-20 text-center;
+}
+
+.about-me__technologies--technologie .technologie p {
+    @apply text-white font-medium;
+}
+
+.about-me__technologies--technologie .technologie img {
+    @apply w-16 h-16 bg-white p-1 rounded aspect-square;
+}
+
+
+/*------------------------------------------------------------------------------*/
+/*------------------------------------------------------------------------------*/
+/*------------------------------------------------------------------------------*/
+
+
+/* My Projects Section */
+.my-projects {
+    @apply w-full my-20 lg:mt-20 md:-mb-56;
+}
+
+.my-projects__heading {
+    @apply mb-10 lg:mb-16 text-center text-3xl lg:text-4xl font-bold;
+}
+
+.my-projects__flex {
+    @apply flex flex-wrap gap-5;
+}
+
+.my-projects__container {
+    @apply w-4/5 mx-auto md:-translate-y-48 bg-white md:py-10 md:px-24 rounded;
+}
+
+.my-projects__project {
+    @apply max-w-xs shadow-lg rounded mx-auto;
+}
+
+.my-projects__project--overlay {
+    @apply relative rounded-t bg-black bg-opacity-0 duration-500;
+}
+
+.my-projects__project--overlay > img {
+    @apply mix-blend-multiply rounded-t;
+}
+
+.my-projects__project--overlay .buttons {
+    @apply absolute w-full h-full flex gap-5 items-center justify-center top-0 left-0 opacity-0 hover:opacity-100 transition-opacity duration-300 z-10;
+}
+
+.my-projects__project--overlay .buttons a {
+    @apply flex w-2/5 h-fit items-center justify-center bg-blue-600 hover:bg-blue-500 p-1 rounded text-white text-lg font-medium;
+}
+
+.my-projects__project--overlay .buttons img {
+    @apply flex w-2/5 items-center justify-center p-1;
+}
+
+.overlay-active {
+    @apply bg-opacity-50 duration-700;
+}
+
+
+/* My Project Card Content */
+.my-projects__project--content {
+    @apply p-3;
+}
+
+.my-projects__project--content h4 {
+    @apply text-lg font-semibold my-2;
+}
+
+.my-projects__project--content-technologies {
+    @apply flex gap-2 mt-5 mb-3;
+}
+
+.my-projects__project--content-technologies .technologie {
+    @apply flex-1;
+}
+
+.my-projects__project--content-technologies .technologie img {
+    @apply w-10 mx-auto;
+}
+
+.my-projects__project--content-technologies .technologie p {
+    @apply text-center;
+}
+
+
+/*------------------------------------------------------------------------------*/
+/*------------------------------------------------------------------------------*/
+/*------------------------------------------------------------------------------*/
+
+
+/* Footer */
+.footer {
+    @apply bg-indigo-700 py-20 md:h-72;
+}
+
+.footer__content {
+    @apply w-4/5 mx-auto;
+}
+
+.footer__content--social {
+    @apply flex items-center justify-center gap-5 my-10 flex-wrap;
+}
+
+.footer__content--social .social {
+    @apply rounded-full p-2 bg-white hover:bg-slate-200;
+}
+
+.footer__content--social .social img {
+    @apply w-10 h-10;
+}
+
+.footer .copyright {
+    @apply text-white text-center text-lg font-semibold;
 }
