--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -379,23 +379,27 @@ body {
 }
 
 .sidebar {
-    @apply h-screen w-2/5 xl:w-1/5 p-5 flex flex-col ;
+    @apply h-screen w-2/5 xl:w-1/5 flex flex-col border-r border-black;
 }
 
 .sidebar__container {
-    @apply h-full flex flex-col gap-y-10 justify-evenly;
+    @apply h-full flex flex-col gap-y-10 justify-between pb-5;
+}
+
+.sidebar__icon {
+    @apply text-xl lg:text-2xl text-indigo-700 font-bold text-center w-full pt-10;
 }
 
 .sidebar__links {
-    @apply p-3;
+    @apply p-3 h-3/5 flex flex-col justify-center gap-y-4;
 }
 
 .sidebar__links a {
-    @apply block text-center text-lg ;
+    @apply block text-center text-lg text-gray-500 hover:text-indigo-700 cursor-pointer font-medium;
 }
 
 .sidebar__options {
-    @apply flex justify-between;
+    @apply flex justify-between px-3;
 }
 
 .sidebar__options .option {
