--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -379,7 +379,7 @@ body {
 }
 
 .sidebar {
-    @apply h-screen w-2/5 xl:w-1/5 flex flex-col border-r border-black;
+    @apply fixed h-screen w-full xl:w-1/5 flex flex-col border-r border-gray-300 bg-white;
 }
 
 .sidebar__container {
@@ -387,19 +387,27 @@ body {
 }
 
 .sidebar__icon {
-    @apply text-xl lg:text-2xl text-indigo-700 font-bold text-center w-full pt-10;
+    @apply text-xl lg:text-2xl text-indigo-700 font-bold text-center w-full;
+}
+
+.close__menu {
+    @apply w-full h-14 px-5 flex justify-center xl:justify-end;
+}
+
+.close__menu button {
+    @apply font-bold text-3xl text-gray-500 hover:text-red-500 transition-colors duration-200;
 }
 
 .sidebar__links {
-    @apply p-3 h-3/5 flex flex-col justify-center gap-y-4;
+    @apply p-3 h-3/5 flex flex-col justify-center gap-y-10;
 }
 
 .sidebar__links a {
-    @apply block text-center text-lg text-gray-500 hover:text-indigo-700 cursor-pointer font-medium;
+    @apply block text-center text-xl text-gray-500 hover:text-indigo-700 cursor-pointer font-semibold;
 }
 
 .sidebar__options {
-    @apply flex justify-between px-3;
+    @apply flex justify-between px-3 w-72 lg:w-1/4 xl:w-full mx-auto;
 }
 
 .sidebar__options .option {
