--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,12 +9,91 @@ body {
     @apply w-full h-screen;
 }
 
-.alerta {
-    @apply block font-medium;
+.alert {
+    @apply fixed text-white text-lg font-medium p-3 rounded top-5 right-0;
 }
 
-.error {
-    @apply text-red-500;
+.alert--error {
+    @apply bg-red-600;
+    animation: alert 1000ms ease-in;
+}
+
+.alert--success {
+    @apply bg-green-600;
+    animation: alert 1000ms ease-in;
+}
+
+@keyframes alert {
+    0% {
+      opacity: 0;
+      right: -1vw;
+    }
+  
+    50% {
+      opacity: 1;
+      right: -0.5vw;
+    }
+  
+    75% {
+      opacity: 1;
+      right: 0vw;
+    }
+  
+    100% {
+      opacity: 0.5;
+      right: 0vw;
+    }
+  
+}
+
+.overlay--loader {
+    @apply fixed top-0 left-0 w-full h-full bg-black bg-opacity-80 flex items-center justify-center;
+}
+
+.loader__container {
+    @apply flex flex-col gap-y-14 w-full h-full items-center justify-center;
+}
+
+.loader {
+    font-size: 10px;
+    width: 1em;
+    height: 1em;
+    border-radius: 50%;
+    position: relative;
+    text-indent: -9999em;
+    animation: mulShdSpin 1.1s infinite ease;
+    transform: translateZ(0);
+  }
+  @keyframes mulShdSpin {
+    0%,
+    100% {
+      box-shadow: 0em -2.6em 0em 0em #ffffff, 1.8em -1.8em 0 0em rgba(255,255,255, 0.2), 2.5em 0em 0 0em rgba(255,255,255, 0.2), 1.75em 1.75em 0 0em rgba(255,255,255, 0.2), 0em 2.5em 0 0em rgba(255,255,255, 0.2), -1.8em 1.8em 0 0em rgba(255,255,255, 0.2), -2.6em 0em 0 0em rgba(255,255,255, 0.5), -1.8em -1.8em 0 0em rgba(255,255,255, 0.7);
+    }
+    12.5% {
+      box-shadow: 0em -2.6em 0em 0em rgba(255,255,255, 0.7), 1.8em -1.8em 0 0em #ffffff, 2.5em 0em 0 0em rgba(255,255,255, 0.2), 1.75em 1.75em 0 0em rgba(255,255,255, 0.2), 0em 2.5em 0 0em rgba(255,255,255, 0.2), -1.8em 1.8em 0 0em rgba(255,255,255, 0.2), -2.6em 0em 0 0em rgba(255,255,255, 0.2), -1.8em -1.8em 0 0em rgba(255,255,255, 0.5);
+    }
+    25% {
+      box-shadow: 0em -2.6em 0em 0em rgba(255,255,255, 0.5), 1.8em -1.8em 0 0em rgba(255,255,255, 0.7), 2.5em 0em 0 0em #ffffff, 1.75em 1.75em 0 0em rgba(255,255,255, 0.2), 0em 2.5em 0 0em rgba(255,255,255, 0.2), -1.8em 1.8em 0 0em rgba(255,255,255, 0.2), -2.6em 0em 0 0em rgba(255,255,255, 0.2), -1.8em -1.8em 0 0em rgba(255,255,255, 0.2);
+    }
+    37.5% {
+      box-shadow: 0em -2.6em 0em 0em rgba(255,255,255, 0.2), 1.8em -1.8em 0 0em rgba(255,255,255, 0.5), 2.5em 0em 0 0em rgba(255,255,255, 0.7), 1.75em 1.75em 0 0em #ffffff, 0em 2.5em 0 0em rgba(255,255,255, 0.2), -1.8em 1.8em 0 0em rgba(255,255,255, 0.2), -2.6em 0em 0 0em rgba(255,255,255, 0.2), -1.8em -1.8em 0 0em rgba(255,255,255, 0.2);
+    }
+    50% {
+      box-shadow: 0em -2.6em 0em 0em rgba(255,255,255, 0.2), 1.8em -1.8em 0 0em rgba(255,255,255, 0.2), 2.5em 0em 0 0em rgba(255,255,255, 0.5), 1.75em 1.75em 0 0em rgba(255,255,255, 0.7), 0em 2.5em 0 0em #ffffff, -1.8em 1.8em 0 0em rgba(255,255,255, 0.2), -2.6em 0em 0 0em rgba(255,255,255, 0.2), -1.8em -1.8em 0 0em rgba(255,255,255, 0.2);
+    }
+    62.5% {
+      box-shadow: 0em -2.6em 0em 0em rgba(255,255,255, 0.2), 1.8em -1.8em 0 0em rgba(255,255,255, 0.2), 2.5em 0em 0 0em rgba(255,255,255, 0.2), 1.75em 1.75em 0 0em rgba(255,255,255, 0.5), 0em 2.5em 0 0em rgba(255,255,255, 0.7), -1.8em 1.8em 0 0em #ffffff, -2.6em 0em 0 0em rgba(255,255,255, 0.2), -1.8em -1.8em 0 0em rgba(255,255,255, 0.2);
+    }
+    75% {
+      box-shadow: 0em -2.6em 0em 0em rgba(255,255,255, 0.2), 1.8em -1.8em 0 0em rgba(255,255,255, 0.2), 2.5em 0em 0 0em rgba(255,255,255, 0.2), 1.75em 1.75em 0 0em rgba(255,255,255, 0.2), 0em 2.5em 0 0em rgba(255,255,255, 0.5), -1.8em 1.8em 0 0em rgba(255,255,255, 0.7), -2.6em 0em 0 0em #ffffff, -1.8em -1.8em 0 0em rgba(255,255,255, 0.2);
+    }
+    87.5% {
+      box-shadow: 0em -2.6em 0em 0em rgba(255,255,255, 0.2), 1.8em -1.8em 0 0em rgba(255,255,255, 0.2), 2.5em 0em 0 0em rgba(255,255,255, 0.2), 1.75em 1.75em 0 0em rgba(255,255,255, 0.2), 0em 2.5em 0 0em rgba(255,255,255, 0.2), -1.8em 1.8em 0 0em rgba(255,255,255, 0.5), -2.6em 0em 0 0em rgba(255,255,255, 0.7), -1.8em -1.8em 0 0em #ffffff;
+    }
+  }
+
+.text--loader {
+    @apply font-medium text-2xl text-white;
 }
 
 .addRecord {
@@ -28,6 +107,8 @@ body {
 .addRecord__container span {
     @apply text-2xl text-white font-bold;
 }
+
+
 
 /* Header Section */
 .header-public {
@@ -436,6 +517,16 @@ body {
     @apply invert;
 }
 
+.icon-menu {
+    @apply w-fit h-fit;
+}
+
+.icon-menu .icon {
+    @apply w-10 h-10 text-gray-500 hover:text-indigo-600 cursor-pointer;
+}
+
+/* Main Content */
+
 .main-content {
     @apply h-screen w-full overflow-y-auto overflow-x-hidden p-10;
 }
@@ -446,7 +537,8 @@ body {
 
 /* Table */
 .table {
-    @apply min-w-max w-full mx-auto border border-indigo-700;
+    min-width: 900px;
+    @apply w-10/12 mx-auto border border-indigo-700;
 }
 
 .table__thead {
@@ -454,7 +546,7 @@ body {
 }
 
 .table__thead tr th {
-    @apply p-5 text-center;
+    @apply p-5 text-center font-medium;
 }
 
 .table__tbody {
@@ -462,7 +554,7 @@ body {
 }
 
 .table__tbody tr td {
-    @apply max-h-96 max-w-xs text-center p-1;
+    @apply max-h-96 max-w-xs text-center py-3 font-medium text-lg;
 }
 
 .table__tbody tr {
@@ -470,11 +562,19 @@ body {
 }
 
 .table__tbody .table__image {
-    @apply w-32 h-32 bg-cover;
+    @apply bg-cover;
+}
+
+.table__tbody .table__image img {
+    @apply w-20 h-20 mx-auto;
 }
 
 .table__options {
-    @apply w-full flex gap-x-5 justify-center;
+    @apply w-full flex gap-x-14 justify-center;
+}
+
+.table__options svg {
+    @apply w-8 h-8 text-gray-600 hover:text-indigo-700;
 }
 
 .table__github--img a,
@@ -486,4 +586,88 @@ body {
 .table__github--img img,
 .table__web--img img {
     @apply w-14 h-14;
+}
+
+/* Modal */
+.overlay {
+    @apply flex justify-center items-center min-w-full w-screen min-h-full h-screen bg-black bg-opacity-70 fixed top-0 left-0 z-10;
+}
+
+.modal {
+    @apply w-10/12 sm:w-80 bg-white rounded p-3 relative flex flex-col justify-center;
+    min-height: 300px;
+    max-height: 600px;
+}
+
+.close--modal {
+    @apply absolute -top-3 -right-3 rounded-full bg-red-600 hover:bg-red-500 p-1 cursor-pointer z-20;
+}
+
+.close--modal svg {
+    @apply h-7 w-7 text-white font-light;
+}
+
+.modal__content {
+    @apply w-full h-full overflow-y-auto;
+}
+
+/* Form Dashboard */
+.form__container {
+    @apply w-full h-full p-1;
+}
+
+.form {
+    @apply h-full flex flex-col justify-center gap-y-2 my-5;
+}
+
+.form .field {
+    @apply w-9/12 p-3 flex flex-col gap-y-3 mx-auto;
+}
+
+.form .field label {
+    @apply text-gray-700 font-medium;
+}
+
+.form .field input {
+    @apply w-full text-lg border rounded p-1;
+}
+
+.upload-image {
+    @apply border border-gray-300 rounded px-5 py-2 flex gap-x-3 items-center justify-center cursor-pointer hover:text-white hover:bg-indigo-600 hover:border-indigo-600;
+}
+
+.form .image--visualizer {
+    @apply w-60 max-h-80 object-fill p-1 shadow-sm shadow-slate-400;
+}
+
+.form .button--submit {
+    @apply border border-gray-300 rounded px-5 py-2 cursor-pointer hover:text-white hover:bg-indigo-600 hover:border-indigo-600;
+}
+
+.delete-record {
+    @apply flex flex-col justify-center items-center gap-y-5;
+}
+
+.delete-record__msg {
+    @apply font-medium text-lg text-center;
+}
+
+.delete-record__img {
+    @apply w-24 h-24 shadow-sm shadow-slate-400 p-3 rounded;
+}
+
+.delete-record__options {
+    @apply flex gap-x-10;
+}
+
+.delete-record__options button {
+    @apply p-3 rounded font-medium text-lg;
+}
+
+.delete-record__options .back {
+    @apply bg-indigo-500 text-white hover:bg-indigo-400;
+}
+
+.delete-record__options .delete {
+    @apply bg-red-600 text-white hover:bg-red-500;  
 }
