--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -304,7 +304,7 @@ body {
 }
 
 .my-projects__project {
-    @apply max-w-xs shadow-lg rounded mx-auto;
+    @apply max-w-xs shadow-lg rounded mx-auto border border-gray-200;
 }
 
 .my-projects__project--overlay {
@@ -320,7 +320,7 @@ body {
 }
 
 .my-projects__project--overlay .buttons a {
-    @apply flex w-2/5 h-fit items-center justify-center bg-blue-600 hover:bg-blue-500 p-1 rounded text-white text-lg font-medium;
+    @apply flex w-2/5 h-fit items-center justify-center bg-indigo-600 hover:bg-indigo-500 p-1 rounded text-white text-lg font-medium;
 }
 
 .my-projects__project--overlay .buttons img {
@@ -334,7 +334,12 @@ body {
 
 /* My Project Card Content */
 .my-projects__project--content {
-    @apply p-3;
+    @apply p-3 border-t border-t-gray-300;
+}
+
+.my-projects__project--content > p {
+    max-height: 122px;
+    @apply text-ellipsis overflow-y-auto whitespace-pre-line;
 }
 
 .my-projects__project--content h4 {
@@ -342,11 +347,11 @@ body {
 }
 
 .my-projects__project--content-technologies {
-    @apply flex gap-2 mt-5 mb-3;
+    @apply flex w-full max-h-20 overflow-y-auto mt-5 mb-3 flex-wrap justify-center;
 }
 
 .my-projects__project--content-technologies .technologie {
-    @apply flex-1;
+    @apply w-fit p-2;
 }
 
 .my-projects__project--content-technologies .technologie img {
@@ -354,7 +359,7 @@ body {
 }
 
 .my-projects__project--content-technologies .technologie p {
-    @apply text-center;
+    @apply text-center font-medium;
 }
 
 
@@ -466,7 +471,7 @@ body {
 
 /* Access Private */
 .accessPrivate {
-    @apply flex gap-x-1;
+    @apply flex gap-x-1 max-h-screen overflow-hidden;
 }
 
 .sidebar {
@@ -526,19 +531,23 @@ body {
 }
 
 /* Main Content */
-
 .main-content {
-    @apply h-screen w-full overflow-y-auto overflow-x-hidden p-10;
+    @apply h-full w-full p-10;
 }
 
 .main-content__section {
-    @apply my-10 w-full overflow-x-auto;
+    @apply my-10 w-full max-h-full overflow-hidden;
 }
 
 /* Table */
+.table__container {
+    max-height: 700px;
+    @apply overflow-y-auto p-2 w-full mx-auto;
+}
+
 .table {
     min-width: 900px;
-    @apply w-10/12 mx-auto border border-indigo-700;
+    @apply w-full p-5 mx-auto border border-indigo-700;
 }
 
 .table__thead {
@@ -550,11 +559,13 @@ body {
 }
 
 .table__tbody {
-    @apply h-full;
+    @apply max-h-full;
 }
 
 .table__tbody tr td {
-    @apply max-h-96 max-w-xs text-center py-3 font-medium text-lg;
+    max-height: 400px;
+    max-width: 120px;
+    @apply text-center py-3 font-medium text-lg overflow-hidden text-ellipsis whitespace-nowrap;
 }
 
 .table__tbody tr {
@@ -570,7 +581,7 @@ body {
 }
 
 .table__options {
-    @apply w-full flex gap-x-14 justify-center;
+    @apply w-full flex gap-x-14 justify-center px-3;
 }
 
 .table__options svg,
@@ -628,7 +639,8 @@ body {
     @apply text-gray-700 font-medium;
 }
 
-.form .field input {
+.form .field input,
+.form .field textarea {
     @apply w-full text-lg border rounded p-1;
 }
 
@@ -670,4 +682,25 @@ body {
 
 .delete-record__options .delete {
     @apply bg-red-600 text-white hover:bg-red-500;  
+}
+
+/* Technologies List */
+.technologies-list {
+    @apply w-full border border-gray-300 rounded;
+}
+
+.technologies-list li {
+    @apply p-2 border-b hover:bg-indigo-600 hover:text-white cursor-pointer first:rounded-t last:rounded-b last:border-b-0;
+}
+
+.tags--container {
+    @apply w-full mt-4 flex gap-2 flex-wrap;
+}
+
+.tag-technology {
+    @apply py-1 px-2 rounded-full bg-indigo-500 text-white font-medium h-fit flex gap-x-2;
+}
+
+.remove-tag {
+    @apply text-gray-100 hover:text-red-600 cursor-pointer font-bold;
 }
